@@ -29,6 +29,20 @@
 ; someIndexedList[] = second
 ; someKeyedList[first] = primary
 ; someKeyedList[second] = secondary
+; ------------------------------------------------
+; BEWARE OF COMPETING SCALAR VALUES BECOMING ARRAY
+; ------------------------------------------------
+; If two ini files in same path - base or override - declare the same scalar-
+; valued setting then the resulting value is an array (of the two values).
+; Whereas a scalar declared in the override path _do_ override ditto setting
+; declared in the base path (as it also should).
+; Check SimpleComplex\Config\IniConfigBase's - correct - use of
+; PHP array_merge_recursive() vs. array_replace_recursive()
+; -------------------------------------------------
+; DO VISUAL INSPECTION OF CONFIG EXPORTS FREQUENTLY
+; -------------------------------------------------
+; php cli.phpsh config-refresh global -y
+; php cli.phpsh config-export global -upy ~/Downloads/config.global.pretty.json
 ; ------------------------------------------------------------------------------
 [lib_vendor_package]
 string = string
